<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/tv_lbl_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/lbl_title"
                    android:textColor="@color/heading"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_poster"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/placeholder_title"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.039"
                    app:layout_constraintStart_toStartOf="@+id/tv_lbl_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_lbl_title" />

            <TextView
                    android:id="@+id/tv_lbl_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lbl_voting"
                    android:textColor="@color/heading"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_lbl_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                    android:id="@+id/tv_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_voting"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toEndOf="@+id/tv_lbl_vote"
                    app:layout_constraintTop_toTopOf="@+id/tv_lbl_vote"
                    app:layout_constraintVertical_bias="0.0" />

            <TextView
                    android:id="@+id/tv_lbl_releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lbl_releaseDate"
                    android:textColor="@color/heading"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_lbl_vote"
                    app:layout_constraintTop_toBottomOf="@+id/tv_lbl_vote" />

            <TextView
                    android:id="@+id/tv_releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_releaseDate"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toEndOf="@+id/tv_lbl_releaseDate"
                    app:layout_constraintTop_toTopOf="@+id/tv_lbl_releaseDate"
                    app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                    android:id="@+id/cb_fav"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/fav_background"
                    android:button="@null"
                    android:gravity="center"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.94"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.060000002" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>